Time: 871 ms (6.45%) | Memory: 50.1 MB (46.96%) - LeetSync